# Literature-Agent

./: .env.example  .gitignore  CHANGELOG.md  DELIVERABLES.md  INDEX.md  INSTALLATION_SUMMARY.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  PROMPTS.md  QUICKSTART.md  README.md  REDDIT_FEATURE.md  START_HERE.md  cron.example  pyproject.toml
scripts/: backfill.py  clear_ledger.py  run_weekly.py  test_reddit.py  verify_setup.py
scripts/setup/: start_vllm.sh  stop_vllm.sh
src/: __init__.py  config.py
src/agents/: __init__.py  pipeline.py  reflection.py
src/clients/: __init__.py  arxiv_client.py  cvf_client.py  openalex_client.py  reddit_client.py
src/dedupe/: __init__.py  ledger.py  normalise.py
src/llm/: __init__.py  prompts.py  vllm_chat.py
src/publish/: __init__.py  linkedin.py
templates/: README.md  linkedin_post_template.md
tests/: __init__.py  test_ledger.py  test_mock_run.py  test_normalise.py  test_reddit_client.py
