[tool.poetry]
name = "literature-agent"
version = "0.1.0"
description = "Autonomous weekly literature agent for 3D Gaussian Splatting papers with vLLM and reflection"
authors = ["Research Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
openai = "^1.12.0"
langgraph = "^0.0.26"
langchain-core = "^0.1.23"
tenacity = "^8.2.3"
python-dateutil = "^2.8.2"
loguru = "^0.7.2"
feedparser = "^6.0.11"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
black = "^23.12.0"
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
